# fraud_hunter_env

./: .dockerignore  .gitignore  .hfignore  AGENTS.md  ARTICLE.md  Dockerfile  README.md  __init__.py  blog.md  client.py  config.py  demo.py  docker-compose.yml  eval.py  inference.py  models.py  npi_utils.py  openenv.yaml  pyproject.toml  replay.py  schema.py
assets/: eval_results.json  generate_charts.py  generate_uml.py  metrics_history.jsonl
data/case_bank/tier_1/t1_08e456fa/: medicare_records.db
data/case_bank/tier_1/t1_3af943e1/: medicare_records.db
data/case_bank/tier_1/t1_4e25e598/: medicare_records.db
data/case_bank/tier_1/t1_8f740e1e/: medicare_records.db
data/case_bank/tier_1/t1_c091823f/: medicare_records.db
data/case_bank/tier_2/t2_488f03e5/: medicare_records.db
data/case_bank/tier_2/t2_6536e299/: medicare_records.db
data/case_bank/tier_2/t2_65dd032e/: medicare_records.db
data/case_bank/tier_2/t2_ca039987/: medicare_records.db
data/case_bank/tier_2/t2_ea3bdd08/: medicare_records.db
data/case_bank/tier_3/t3_948ed57d/: medicare_records.db
data_gen/: __init__.py  build_case_bank.py  case_compiler.py  pdf_evidence.py  typology_dispatcher.py
scripts/: http_surface_check.py  validate_runtime.py
server/: __init__.py  app.py  data_loader.py  difficulty.py  fraud_hunter_env_environment.py  grader.py  http_contract.py  metrics_bus.py  online_rl.py  requirements.txt  sandbox.py
tests/: __init__.py  test_case_contracts.py  test_environment.py  test_grader.py  test_http_actions.py  test_models.py  test_online_rl.py  test_replay.py  test_typology_dispatcher.py  test_upload_and_nl_api.py
tests/smoke/: __init__.py  conftest.py  test_end_to_end_smoke.py
training/: __init__.py  grpo_train.ipynb  grpo_train.py  plot_train_api.py  train_api.py
web/: index.html
(+14 files in other folders)
